# DFRot_

./: .gitignore  README.md  evalonly.sh  main.py  main_separate.py  misc.py  pyproject.toml  rot_run.sh  xonly.sh
scripts/: generate_calibration.py  generate_scripts.py  optimize_procrustes_alter.py  rot_run.sh  separate_scripts.py  vanilla_scripts.py
utils/: data_utils.py  eval_utils.py  gptq_utils.py  hadamard_148.txt  hadamard_matrix.py  hadamard_utils.py  householder_utils.py  model_utils.py  monkeypatch.py  quant_utils.py  rotation_utils.py  svd_utils.py
